# Chatroom

./: .gitignore  README.md
Client/: CMakeLists.txt  README.md
Client/src/: client.c  client.h  main.c  window.c  window.h
Server/: CMakeLists.txt
Server/src/: main.c  server.c  server.h
